# SERPICO

./: .gitignore  CMakeLists.txt  LICENSE  README.md  serpico.c
scr/: serpico.c
src/: serpico.c
